# LPA-Star-for-mountainous-terrain

./: .gitignore  README.md  Z_crop_meta.json  benchmark.py  benchmark_matrix.py  benchmark_matrix_fig4_stats.csv  benchmark_supplement.md  ceiling.npy  communication_risk.py  constraints.txt  corridor_meta.json  dynamic_events.py  floor.npy  graph_edges.npy  graph_node_roles.json  graph_nodes.npy  graph_terminal_status.json  human_risk_osm.py  init_graph.py  layer_allowed.npy  layered_graph.py  lpa_seed_sweep.csv  lpa_seed_sweep_summary.json  lpa_star.py  osm_feature_summary.json  path_planning.py  path_result.npy  path_smooth.npy  pyproject.toml  requirements-dev.txt  requirements.txt  risk_hotspot.npy  risk_human.npy  risk_l1.npy  risk_l2.npy  risk_l3.npy  risk_l4.npy  risk_trail.npy  run_multi_scene.py  safe_corridor.py  (+5 more)
article_planner/: __init__.py  benchmarking.py  communication.py  corridor.py  dem_crop.py  geo.py  graph.py  outputs.py  pipeline.py  planner.py  risk.py  scenario_config.py  target_locator.py  tasks.py
benchmark_final_results/: benchmark_combo_status.csv  benchmark_config.json  benchmark_pairwise.csv  benchmark_summary.csv  benchmark_table.md  benchmark_trials.csv  experiment_A.csv  experiment_B.csv  experiment_C.csv  experiment_D.csv
benchmark_matrix_cont_k7_k10/: benchmark_combo_status.csv  benchmark_config.json  benchmark_events.csv  benchmark_pairwise.csv  benchmark_summary.csv  benchmark_table.md  benchmark_trials.csv  experiment_A.csv  experiment_B.csv  experiment_C.csv  experiment_D.csv  fig4_stats.csv  k10_stats.csv
data/: README.md
(+148 files in other folders)
